# quant-toolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: portfolio.yaml  report.yaml
examples/: asset_report_ILMN.py
outputs/reports/: asset_ilmn_2026_02_02.html  asset_ilmn_2026_02_02.md  asset_lrn_2025_10_28.html  asset_lrn_2025_10_28.md  asset_lrn_2026_02_03.html  asset_lrn_2026_02_03.md
outputs/tables/: ilmn_capm.csv  ilmn_stress.csv  ilmn_var_backtest.csv  ilmn_var_es.csv  lrn_capm.csv  lrn_stress.csv  lrn_var_backtest.csv  lrn_var_es.csv
scripts/: run_asset_report.py  run_portfolio_fit.py  run_portfolio_report.py
src/qrt/: __init__.py  config.py  types.py
src/qrt/analytics/: portfolio.py
src/qrt/data/: align.py  cache.py  loaders.py  validators.py
src/qrt/features/: returns.py
src/qrt/metrics/: performance.py  risk_adjusted.py
src/qrt/models/: base.py
src/qrt/portfolio/: construction.py  covariance.py
src/qrt/reports/: asset_report.py  portfolio_fit.py  portfolio_report.py  render_html.py  render_md.py
src/qrt/risk/: backtesting.py  expected_shortfall.py  factor_risk.py  stress.py  var.py
src/qrt/utils/: math.py  plotting.py  stats.py
src/qrt/viz/: distributions.py  factors.py  risk.py  timeseries.py
src/quant_research_toolkit/io/: __init__.py  cache.py  loaders.py  validators.py
src/quant_research_toolkit/metrics/: __init__.py  performance.py  risk_adjusted.py
src/quant_research_toolkit/portfolio/: __init__.py  construction.py  covariance.py  optimisation.py  risk_parity.py
src/quant_research_toolkit/risk/: var.py  (+1 more)
(+25 files in other folders)
